--- a/Plyr/index.html
+++ b/Plyr/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <video id="player" playsinline controls>
-        <source src="https://cdnapisec.kaltura.com/p/1513041/sp/151304100/playManifest/entryId/1_f0k6eon9/flavorIds/1_vj7t531m/format/applehttp/protocol/https/a.m3u8?referrer=aHR0cHM6Ly8xNTEzMDQxLm1lZGlhc3BhY2Uua2FsdHVyYS5jb20=&ks=djJ8MTUxMzA0MXyaVDgMw_PhoF1Iok1NOLrrQDjbBzm-pihvrHlfNKx2PJqDIrvHuUnoE3k1hxIzj22rT04DK_84ybCFiK5NfohmEpIzRTcACFrPXbfuIdgDnw9MggyQpeknaD-L-_FN9XVMxjBlPS7JItJyD_fKS8AVqRCsrnFxItC7evOar1khYoNGZk5pkm_EczRKOVlxCy5qOPdS6B7xS4DgsA0NTkUoI-a6cHC-mjVnlVazHjOZE7n5yNsvjgN14EU9mEmEz-hYL5Of-pO11CZAKzpxZiv1y8Sp1pBhIhDdhAS1DBQM2ofaoUl0N32G53oeTnKC7X5iz_HHK-uB270AzI35QiI0cu9CxPIT9BPoSiQwf6dn6TbsFPR4dPWceaRAIduzTGoEOwHTkbrGEFFSuRy2eaYjmxdB5G4gFe3__-woQKOOvA==&playSessionId=687d1106-75e9-b945-c8e9-7a60a0cfc770&clientTag=html5:v2.89&preferredBitrate=1600&uiConfId=43882771" type="video/mp4" />
+        <source src="https://cci-mtp.s3.amazonaws.com/Fish_W_FDSA_NO.mp4" type="video/mp4" />
         </video>
         <script src="https://cdn.plyr.io/3.6.8/plyr.polyfilled.js"></script>
         <script>
